--- a/disk-swap/rootfs/var/www/index.html
+++ b/disk-swap/rootfs/var/www/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SD Card Swap</title>
+    <title>Disk Swap</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
@@ -25,10 +25,10 @@
 </head>
 <body>
     <div class="card">
-        <h1>SD Card Swap</h1>
-        <p>Flash a new SD card with Home Assistant OS.</p>
+        <h1>Disk Swap</h1>
+        <p>Flash Home Assistant OS to any USB device.</p>
         <hr>
-        <p class="status">Add-on skeleton is running. The full UI will be implemented here.</p>
+        <p class="status">App skeleton is running. The full UI will be implemented here.</p>
         <p><strong>Next steps:</strong></p>
         <ul>
             <li>Block device detection and listing</li>
